# SurrealDBServer

./: README.md
surrealdb_rpc_service/: .gitignore  Cargo.toml  Dockerfile  build.rs  build_docker.rs  deploy.sh  dockerbuild.sh  fly.toml
surrealdb_rpc_service/dependencies/: env.json
surrealdb_rpc_service/proto(copied)/: authentication_service.proto
surrealdb_rpc_service/src/: main.rs
surrealdb_rpc_service/src/authentication_service/: mod.rs  test.rs
surrealdb_rpc_service/src/env_loader/: mod.rs
surrealdb_rpc_service/src/surreal_server/: drop_dead_handler.rs  mod.rs  test.rs
