[package]
name = "surrealdb_rpc_service"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = "1.5.4"
tokio = { version = "1.38.1", features = ["full"] }
prost = "0.13.1"
tonic = { version = "0.12.1", features = ["tls", "tls-roots"] }
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.3"
serde = "1.0.204"
hyper = { version = "1.4.1", features = ["full"] }
axum = { version = "0.7.5", features = ["http2"] }
hyper-tls = "0.6.0"

[build-dependencies]
tonic-build = "0.12.1"
